card height on mobile fixed

--- a/src/css/Recipe.module.css
+++ b/src/css/Recipe.module.css
@@ -9,6 +9,12 @@
   height: 38rem;
 }
 
+@media (max-width: 600px) { 
+  .card_body { 
+    height: fit-content;
+  }
+}
+
 .card_body_large {
   padding: 0 !important;
   height: fit-content;
